minecraft-stack/mc-website/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-web
  namespace: minecraft-stack
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mc-web
  template:
    metadata:
      labels:
        app: mc-web
    spec:
      containers:
        - name: mc-web
          image: jtmb92/mcweb:diggingin # Replace with your actual image
          ports:
            - containerPort: 80
