minecraft-stack/mc-website/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-web-service
  namespace: minecraft-stack
spec:
  selector:
    app: mc-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
